--- a/app/src/main/res/raw/about.html
+++ b/app/src/main/res/raw/about.html
@@ -22,7 +22,7 @@
 </p>
 
 <dl>
-    <dt><b>Lincense:</b></dt>
+    <dt><b>License:</b></dt>
     <dd>GPLv3</dd>
     <dt><b>Source Code:</b></dt>
     <dd><a href="https://gitlab.com/axet/android-call-recorder">https://gitlab.com/axet/android-call-recorder</a>
